--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,5 @@
 [submodule "lib/nxtp"]
 	path = lib/nxtp
 	url = https://github.com/connext/nxtp
+[submodule "/Users/eddie/connext/clean/ystarter-foundry-kit/lib/nxtp"]
+	branch = main
