--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	url = https://github.com/connext/nxtp
 [submodule "/Users/eddie/connext/clean/ystarter-foundry-kit/lib/nxtp"]
 	branch = main
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
