--- a/foundry.toml
+++ b/foundry.toml
@@ -3,10 +3,13 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 test = 'src/test'
-remappings = [
-    'ds-test/=lib/ds-test/src/',
-    '@yearnvaults/=lib/yearn-vaults/',
-    '@openzeppelin/=lib/openzeppelin-contracts/'
-]
+
+solc_version = '0.8.15'
+auto_detect_solc = false
+optimizer = true
+optimizer_runs = 1_000
+ffi=true
+
+fs_permissions = [{ access = "read", path = "./"}]
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
